src/endpoint-configuration-service/src/test/resources/expectations/empty/listener.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: envoy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    traffic_direction: OUTBOUND
    listener_filters:
      - name: envoy.filters.listener.tls_inspector
      - name: envoy.filters.listener.original_dst
    filter_chains:
      - name: https_chain
        filter_chain_match:
          transport_protocol: tls
        filters:
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: passthrough-https
              stat_prefix: https_passthrough
      - name: http_chain
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: allow_any
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: passthrough
              http_filters:
                - name: composite
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                    extension_config:
                      name: composite
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite
                    xds_matcher:
                      matcher_tree:
                        input:
                          name: request-path
                          typed_config:
                            "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                            header_name: x-request-add-auth
                        exact_match_map:
                          map:
                - name: envoy.filters.http.router
